Prediction UI updates.

--- a/mysite/crimeprediction/forecaster/templates/predict.html
+++ b/mysite/crimeprediction/forecaster/templates/predict.html
@@ -17,47 +17,47 @@
       We have attempted to forecast the number of crimes across zip codes using <a href="https://en.wikipedia.org/wiki/Regression_analysis">regression models</a> 
     </li>
     <li>
-      We have tried using data from different sources and categories to consider various features like:
-      <ul class="list-inline">
+      We have used data from different sources and categories to consider various features such as:
+      <ul>
       <li>
-        Unemployment rate | 
+        Unemployment rate
       </li>        
       <li>
-        Population | 
+        Population
       </li>
       <li>
-        Weather conditions | 
+        Weather conditions
       </li>
       <li>
-        Number of abandoned houses | 
+        Number of abandoned houses
       </li>
       <li>
-        Number of street lights not working ...
+        Number of street lights not working
       </li>
       </ul>  
     </li>
     <li>
       We created different models for each crime type and below you can see a geographical representation of the predicted crimes at different zip codes.
     </li>
-    <ul class="list-inline">
+    <ul>
       <li>
-        <a href="#map_assault"> Assault </a> |
+        <a href="#map_assault">Assault</a>
       </li>
       <li>
-        <a href="#map_battery"> Battery </a> | 
+        <a href="#map_battery">Battery</a>
       </li>
       <li>
-        <a href="#map_burglary"> Burglary </a> | 
+        <a href="#map_burglary">Burglary</a>
       </li>
       <li>
-        <a href="#map_robbery"> Robbery </a> | 
+        <a href="#map_robbery">Robbery</a>
       </li>
       <li>
-        <a href="#map_theft"> Theft </a>
+        <a href="#map_theft">Theft</a>
       </li>
     </ul>
     <li>
-      Hovering over the markers on the map can show you the zip code and the prediction value
+      Hovering over the markers on the map can show you the zip code and the predicted number of crimes for a specific week
     </li>
   </ul>
     <div class="row" style= "border: 2px solid black; margin: 80px; width: 1050px">
